@@ -111,6 +111,7 @@ import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.same;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doThrow;
@@ -2441,7 +2442,7 @@ public class TaskManagerTest {
         final StreamsProducer producer = mock(StreamsProducer.class);
         when(activeTaskCreator.streamsProducer()).thenReturn(producer);
         final ConsumerGroupMetadata groupMetadata = mock(ConsumerGroupMetadata.class);
-        
+
         when(consumer.groupMetadata()).thenReturn(groupMetadata);
         when(consumer.assignment()).thenReturn(union(HashSet::new, taskId00Partitions, taskId01Partitions));
 
@@ -4880,36 +4881,33 @@ public class TaskManagerTest {
     }
 
     @Test
-    public void shouldRecycleStartupTasksFromStateDirectoryAsActive() {
+    public void shouldCreateActiveTaskFromStartupStateStore() {
         final Tasks taskRegistry = new Tasks(new LogContext());
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, taskRegistry);
-        final StandbyTask startupTask = standbyTask(taskId00, taskId00ChangelogPartitions).build();
-
         final StreamTask activeTask = statefulTask(taskId00, taskId00ChangelogPartitions).build();
-        when(activeTaskCreator.createActiveTaskFromStandby(eq(startupTask), eq(taskId00Partitions), any()))
-                .thenReturn(activeTask);
-
+        when(activeTaskCreator.createTasks(consumer, taskId00Assignment)).thenReturn(singletonList(activeTask));
         when(stateDirectory.hasStartupTasks()).thenReturn(true, false);
-        when(stateDirectory.removeStartupTask(taskId00)).thenReturn(startupTask, (Task) null);
+        when(stateDirectory.removeStartupState(taskId00)).thenReturn(true, false);
+
+        assertFalse(taskRegistry.hasPendingTasksToInit());
 
         taskManager.handleAssignment(taskId00Assignment, Collections.emptyMap());
 
-        // ensure we used our existing startup Task directly as a Standby
+        // ensure we used our existing startup state store to create our active task
         assertTrue(taskRegistry.hasPendingTasksToInit());
         assertEquals(Collections.singleton(activeTask), taskRegistry.drainPendingTasksToInit());
 
-        // we're using a mock StateUpdater here, so now that we've drained the task from the queue of startup tasks to init
+        // we're using a mock StateUpdater here, so now that we've created the task from the startup store
         // let's "add" it to our mock StateUpdater
         when(stateUpdater.tasks()).thenReturn(Collections.singleton(activeTask));
         when(stateUpdater.standbyTasks()).thenReturn(Collections.emptySet());
 
-        // ensure we recycled our existing startup Standby into an Active task
-        verify(activeTaskCreator).createActiveTaskFromStandby(eq(startupTask), eq(taskId00Partitions), any());
+        final InOrder inOrder = inOrder(activeTaskCreator);
+        inOrder.verify(activeTaskCreator).createTasks(same(consumer), eq(Map.of(taskId00, taskId00Partitions)));
+        inOrder.verify(activeTaskCreator).createTasks(consumer, emptyMap());
 
-        // ensure we didn't construct any new Tasks
-        verify(activeTaskCreator).createTasks(any(), eq(Collections.emptyMap()));
-        verify(standbyTaskCreator).createTasks(Collections.emptyMap());
-        verifyNoMoreInteractions(activeTaskCreator);
+        inOrder.verifyNoMoreInteractions();
+        verify(standbyTaskCreator).createTasks(Map.of());
         verifyNoMoreInteractions(standbyTaskCreator);
 
         // verify the recycled task is now being used as an assigned Active
@@ -4918,36 +4916,40 @@ public class TaskManagerTest {
     }
 
     @Test
-    public void shouldUseStartupTasksFromStateDirectoryAsStandby() {
+    public void shouldCreateStandbyTaskFromStartupStateStore() {
         final Tasks taskRegistry = new Tasks(new LogContext());
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, taskRegistry);
-        final StandbyTask startupTask = standbyTask(taskId00, taskId00ChangelogPartitions).build();
+        final StandbyTask standbyTask = standbyTask(taskId00, taskId00ChangelogPartitions).build();
+        when(standbyTaskCreator.createTasks(eq(Map.of(taskId00, taskId00Partitions)))).thenReturn(Set.of(standbyTask));
+
 
         when(stateDirectory.hasStartupTasks()).thenReturn(true, true, false);
-        when(stateDirectory.removeStartupTask(taskId00)).thenReturn(startupTask, (Task) null);
+        when(stateDirectory.removeStartupState(taskId00)).thenReturn(true, false);
 
         assertFalse(taskRegistry.hasPendingTasksToInit());
 
         taskManager.handleAssignment(Collections.emptyMap(), taskId00Assignment);
 
-        // ensure we used our existing startup Task directly as a Standby
+        // ensure we used our existing startup state to create our standby task
         assertTrue(taskRegistry.hasPendingTasksToInit());
-        assertEquals(Collections.singleton(startupTask), taskRegistry.drainPendingTasksToInit());
+        assertEquals(Collections.singleton(standbyTask), taskRegistry.drainPendingTasksToInit());
 
         // we're using a mock StateUpdater here, so now that we've drained the task from the queue of startup tasks to init
         // let's "add" it to our mock StateUpdater
-        when(stateUpdater.tasks()).thenReturn(Collections.singleton(startupTask));
-        when(stateUpdater.standbyTasks()).thenReturn(Collections.singleton(startupTask));
+        when(stateUpdater.tasks()).thenReturn(Collections.singleton(standbyTask));
+        when(stateUpdater.standbyTasks()).thenReturn(Collections.singleton(standbyTask));
 
         // ensure we didn't construct any new Tasks, or recycle an existing Task; we only used the one we already have
-        verify(activeTaskCreator).createTasks(any(), eq(Collections.emptyMap()));
-        verify(standbyTaskCreator).createTasks(Collections.emptyMap());
+        verify(activeTaskCreator, times(2)).createTasks(any(), eq(Collections.emptyMap()));
+        final InOrder inOrder = inOrder(standbyTaskCreator);
+        inOrder.verify(standbyTaskCreator).createTasks(Map.of(taskId00, taskId00Partitions));
+        inOrder.verify(standbyTaskCreator).createTasks(Collections.emptyMap());
         verifyNoMoreInteractions(activeTaskCreator);
         verifyNoMoreInteractions(standbyTaskCreator);
 
         // verify the startup Standby is now being used as an assigned Standby
         assertEquals(Collections.emptyMap(), taskManager.activeTaskMap());
-        assertEquals(Collections.singletonMap(taskId00, startupTask), taskManager.standbyTaskMap());
+        assertEquals(Collections.singletonMap(taskId00, standbyTask), taskManager.standbyTaskMap());
     }
 
     @Test
